index.html modified

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      <div class="wrapper">
       <div class="card card1">
         <div class="img">
-          <img src="images/icon-sedans.svg" alt="" srcset="">
+          <img src="images/icon-sedans.svg" alt="sedans">
         </div>
           <h1>Sedan</h1>
           <p>
@@ -32,7 +32,7 @@
       </div>
       <div class="card card2">
         <div class="img">
-          <img src="images/icon-suvs.svg" alt="" srcset="">
+          <img src="images/icon-suvs.svg" alt="suv">
         </div>
           <h1>Suvs</h1>
           <p>
@@ -43,7 +43,7 @@
       </div>
       <div class="card card3">
         <div class="img">
-          <img src="images/icon-luxury.svg" alt="" srcset="">
+          <img src="images/icon-luxury.svg" alt="luxury car">
         </div>
           <h1>luxury</h1>
           <p>
